<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.bbox.myjournal.viewModels.AddNewFeelingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/purple_700"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_about_feeling"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvChooseColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@={viewModel.tvColor}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/greenBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/color_green"
                    android:onClick="@{() -> viewModel.chooseColor(0)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvChooseColor" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/yellowBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/color_yellow"
                    android:onClick="@{() -> viewModel.chooseColor(1)}"
                    app:layout_constraintStart_toEndOf="@+id/greenBtn"
                    app:layout_constraintTop_toBottomOf="@+id/tvChooseColor" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/redBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/color_red"
                    android:onClick="@{() -> viewModel.chooseColor(2)}"
                    app:layout_constraintStart_toEndOf="@+id/yellowBtn"
                    app:layout_constraintTop_toBottomOf="@+id/tvChooseColor" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDateAndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@={viewModel.tvDateAndTime}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/greenBtn" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tvDateAndTimeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:elevation="2dp"
                    android:minHeight="40dp"
                    android:onClick="@{() -> viewModel.openCalender()}"
                    android:text="@string/label_date_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDateAndTime" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/field_box"
                    android:gravity="top"
                    android:textColorHint="@color/field_box_stroke"
                    android:hint="@string/label_write_feeling"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:maxLines="6"
                    android:minLines="6"
                    android:padding="8dp"
                    android:text="@={viewModel.etDetail}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDateAndTimeBtn" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:elevation="2dp"
                    android:minHeight="56dp"
                    android:onClick="@{() -> viewModel.checkValidation()}"
                    android:text="@string/label_submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etDetail" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>